Add RAG service, presentation slides, and frontend enhancements
- Add PRESENTATION_SLIDES.md for project demo
- Add backend/rag-service with LangGraph + LlamaIndex RAG system
- Add backend/lida-service for LIDA integration
- Add Supabase setup scripts and fake data
- Add deploy-to-aks.sh deployment script
- Update frontend/game-dashboard with RAG toggle and filters
- Update Dockerfile and configs for ODR

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,6 @@ pyproject.toml.backup*
 # Large demo/asset files
 **/.assets/demo.gif
 **/demo.gif
+
+# Deployment guides that may contain secrets
+**/QUICK_DEPLOY.md
