--- a/open_deep_research-main/pyproject.toml
+++ b/open_deep_research-main/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.10"
 dependencies = [
-    "langgraph>=0.5.4",
+    "langgraph>=0.5.4,<0.6.0",
+    "langgraph-checkpoint>=2.0.0,<3.0.0",
     "langchain-community>=0.3.9",
     "langchain-openai>=0.3.28",
     "langchain-anthropic>=0.3.15",
@@ -48,8 +49,6 @@ dependencies = [
     "playwright>=1.40.0",
     "lxml>=4.9.0",
     "rank-bm25>=0.2.2",
-    "sentence-transformers>=2.2.0",
-    "scikit-learn>=1.3.0",
 ]
 
 [project.optional-dependencies]
